--- a/package.json
+++ b/package.json
@@ -25,7 +25,10 @@
     "nodemon": "^3.1.9",
     "pdfkit": "^0.16.0",
     "prisma": "^6.5.0",
-    "prisma-erd-generator": "^2.0.4",
+    "puppeteer": "^23.11.1",
     "zod": "^3.24.2"
+  },
+  "devDependencies": {
+    "prisma-erd-generator": "^2.0.4"
   }
 }
